--- a/Signal/src/util/Launch Screen.storyboard
+++ b/Signal/src/util/Launch Screen.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="ipad10_5" orientation="portrait" layout="fullscreen" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,27 +17,20 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ultramarine-launch-screen" translatesAutoresizingMaskIntoConstraints="NO" id="GV8-QX-qgJ">
-                                <rect key="frame" x="0.0" y="0.0" width="1282" height="1112"/>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="signal-logo-128-launch-screen" translatesAutoresizingMaskIntoConstraints="NO" id="b92-yg-YYQ">
-                                <rect key="frame" x="353" y="492" width="128" height="128"/>
+                                <rect key="frame" x="132.66666666666666" y="362" width="127.99999999999997" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="128" id="Xkq-NE-BxQ"/>
                                     <constraint firstAttribute="height" constant="128" id="vKA-H4-Kec"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.22745098039215686" green="0.46274509803921571" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" name="Signal/background"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="GV8-QX-qgJ" secondAttribute="bottom" id="3Q8-UI-t4t"/>
                             <constraint firstItem="b92-yg-YYQ" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="3n6-fz-Z3k"/>
-                            <constraint firstAttribute="trailing" secondItem="GV8-QX-qgJ" secondAttribute="trailing" constant="-448" id="Jal-PL-JBn"/>
-                            <constraint firstItem="GV8-QX-qgJ" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Q8d-NE-bK1"/>
-                            <constraint firstItem="GV8-QX-qgJ" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="VrU-MQ-maV"/>
                             <constraint firstItem="b92-yg-YYQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gMB-yR-CiP"/>
                         </constraints>
                     </view>
@@ -48,6 +42,8 @@
     </scenes>
     <resources>
         <image name="signal-logo-128-launch-screen" width="128" height="128"/>
-        <image name="ultramarine-launch-screen" width="1" height="1"/>
+        <namedColor name="Signal/background">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
