--- a/Signal/src/util/Launch Screen.storyboard
+++ b/Signal/src/util/Launch Screen.storyboard
@@ -28,7 +28,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" name="Signal/background"/>
+                        <color key="backgroundColor" name="Signal/BackgroundLevels/backgroundBase"/>
                         <constraints>
                             <constraint firstItem="b92-yg-YYQ" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="3n6-fz-Z3k"/>
                             <constraint firstItem="b92-yg-YYQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gMB-yR-CiP"/>
@@ -42,7 +42,7 @@
     </scenes>
     <resources>
         <image name="signal-logo-128-launch-screen" width="128" height="128"/>
-        <namedColor name="Signal/background">
+        <namedColor name="Signal/BackgroundLevels/backgroundBase">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
